# rust-web-hello-world

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  Readme.md  rust-template.sh
.github/workflows/: codeql.yml
src/: db.rs  handlers.rs  main.rs
src/entities/: users.rs
static/: globals.css  script.js
templates/: index.hbs  index.html.tera
