[package]
name = "rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1.19"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
dotenvy = "0.15"        # Para cargar .env con la conexión a DB
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

